@@ -8,113 +8,113 @@
   <meta http-equiv="content-type" content="text/html;charset=UTF-8"/>
   <style type="text/css">
     input {font-size: 11pt;}
-  </style>
+ </style>
 </head>
 <body>
 <center>
 <div style="width: 350px; background-color:#151515;">
 <font size="-2">
 <br>
-<input type=button onClick="javascript:window.location='remote.cgi?IRcode=08';" value="Power" style="background-color:red; height: 25px; width: 68px;" />
+<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_POWER';" value="Power" style="background-color:red; height: 25px; width: 68px;" /><font size="+1" color="yellow"> OpenLGTV BCM remote</font>
 <br><br>
-<input type=button onClick="javascript:window.location='remote.cgi?IRcode=95';"  value="EnergyS" style="height: 25px; width: 68px; background-color:lightgreen" />
+<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_ENERGY_SAVING';" value="EnergyS" style="height: 25px; width: 68px; background-color:lightgreen" />
 &nbsp
-<input type=button onClick="javascript:window.location='remote.cgi?IRcode=30';"  value="A / V" style="height: 25px; width: 68px; background-color:#FFEA8A" />
+<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_AV_MODE';" value="A / V" style="height: 25px; width: 68px; background-color:#FFEA8A" />
 &nbsp
-<input type=button onClick="javascript:window.location='remote.cgi?IRcode=0B';"  style="height: 25px; width: 67px" value="Input" />
+<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_INPUT';" style="height: 25px; width: 67px" value="Input" />
 &nbsp
-<input type=button onClick="javascript:window.location='remote.cgi?IRcode=F0';"  style="height: 25px; width: 67px" value="TV/RAD"/> 
+<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_TV_RAD';" style="height: 25px; width: 67px" value="TV/RAD"/> 
 <br><br>
-<input type=button onClick="javascript:window.location='remote.cgi?IRcode=11';"  style="height: 25px; width: 100px" value="1 .,;@"/>
-<input type=button onClick="javascript:window.location='remote.cgi?IRcode=12';"  style="height: 25px; width: 100px" value="2 abc"/>
-<input type=button onClick="javascript:window.location='remote.cgi?IRcode=13';"  style="height: 25px; width: 100px" value="3 def"/>
+<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_1';" style="height: 25px; width: 100px" value="1 .,;@"/>
+<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_2';" style="height: 25px; width: 100px" value="2 abc"/>
+<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_3';" style="height: 25px; width: 100px" value="3 def"/>
 <br><br>
-<input type=button onClick="javascript:window.location='remote.cgi?IRcode=14';"  style="height: 25px; width: 100px" value="4 ghi"/>
-<input type=button onClick="javascript:window.location='remote.cgi?IRcode=15';"  style="height: 25px; width: 100px" value="5 jkl"/>
-<input type=button onClick="javascript:window.location='remote.cgi?IRcode=16';"  style="height: 25px; width: 100px" value="6 mno"/>
+<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_4';" style="height: 25px; width: 100px" value="4 ghi"/>
+<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_5';" style="height: 25px; width: 100px" value="5 jkl"/>
+<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_6';" style="height: 25px; width: 100px" value="6 mno"/>
 <br><br>
-<input type=button onClick="javascript:window.location='remote.cgi?IRcode=17';"  style="height: 25px; width: 100px" value="7 pqrs"/>
-<input type=button onClick="javascript:window.location='remote.cgi?IRcode=18';"  style="height: 25px; width: 100px" value="8 tuv"/>
-<input type=button onClick="javascript:window.location='remote.cgi?IRcode=19';"  style="height: 25px; width: 100px" value="9 wxyz"/>
+<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_7';" style="height: 25px; width: 100px" value="7 pqrs"/>
+<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_8';" style="height: 25px; width: 100px" value="8 tuv"/>
+<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_9';" style="height: 25px; width: 100px" value="9 wxyz"/>
 <br><br>
-<input type=button onClick="javascript:window.location='remote.cgi?IRcode=53';"  style="height: 25px; width: 100px" value="LIST"/>
-<input type=button onClick="javascript:window.location='remote.cgi?IRcode=10';"  style="height: 25px; width: 100px" value="0  ._."/>
-<input type=button onClick="javascript:window.location='remote.cgi?IRcode=1A';"  style="height: 25px; width: 100px" value="Q. VIEW"/>
+<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_LIST';" style="height: 25px; width: 100px" value="LIST"/>
+<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_0';" style="height: 25px; width: 100px" value="0 ._."/>
+<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_Q_VIEW';" style="height: 25px; width: 100px" value="Q. VIEW"/>
 <br><br>
-<input type=button onClick="javascript:window.location='remote.cgi?IRcode=02';"  style="height: 40px; width: 79px" value="VOL. Up"/>
+<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_VOL_UP';" style="height: 40px; width: 79px" value="VOL. Up"/>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<input type=button onClick="javascript:window.location='remote.cgi?IRcode=1E';"  style="height: 25px; width: 70px" value="FAV"/>
+<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_FAV_MARK';" style="height: 25px; width: 70px" value="FAV"/>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<input type=button onClick="javascript:window.location='remote.cgi?IRcode=00';"  style="height: 40px; width: 79px" value="CH.  Up"/>
+<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_PAGE_UP';" style="height: 40px; width: 79px" value="CH. Up"/>
 <br>
 
-<input type=button onClick="javascript:window.location='remote.cgi?IRcode=79';" style="height: 25px; width: 70px" value="RATIO"/>
+<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_RATIO';" style="height: 25px; width: 70px" value="RATIO"/>
 <br>
 
-<input type=button onClick="javascript:window.location='remote.cgi?IRcode=03';"  style="height: 40px; width: 79px" value="VOL.Dwn"/>
+<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_VOL_DOWN';" style="height: 40px; width: 79px" value="VOL.Dwn"/>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<input type=button onClick="javascript:window.location='remote.cgi?IRcode=09';"  style="height: 25px; width: 70px" value="MUTE"/>
+<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_MUTE';" style="height: 25px; width: 70px" value="MUTE"/>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<input type=button onClick="javascript:window.location='remote.cgi?IRcode=01';"  style="height: 40px; width: 79px" value="CH. Dwn"/>
+<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_PAGE_DOWN';" style="height: 40px; width: 79px" value="CH. Dwn"/>
 <br><br>
-<input type=button onClick="javascript:window.location='remote.cgi?IRcode=43';"  style="height: 25px; width: 100px" value="MENU"/>
-<input type=button onClick="javascript:window.location='remote.cgi?IRcode=59';"  style="height: 25px; width: 100px" value="NetCast"/>
-<input type=button onClick="javascript:window.location='remote.cgi?IRcode=45';"  style="height: 25px; width: 100px" value="Q. MENU"/>
+<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_MENU';" style="height: 25px; width: 100px" value="MENU"/>
+<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_NETCAST';" style="height: 25px; width: 100px" value="NetCast"/>
+<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_Q_MENU';" style="height: 25px; width: 100px" value="Q. MENU"/>
 <br><br>
 
-<input type=button onClick="javascript:window.location='remote.cgi?IRcode=40';" style="height: 40px; width: 100px" value="/\"/>
+<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_UP';" style="height: 40px; width: 100px" value="/\"/>
 <br><br>
-<input type=button onClick="javascript:window.location='remote.cgi?IRcode=07';"  style="height: 40px; width: 100px" value="<"/>
-<input type=button onClick="javascript:window.location='remote.cgi?IRcode=44';"  style="height: 40px; width: 100px" value="OK"/>
-<input type=button onClick="javascript:window.location='remote.cgi?IRcode=06';"  style="height: 40px; width: 100px" value=">"/>
+<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_LEFT';" style="height: 40px; width: 100px" value="<"/>
+<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_OK';" style="height: 40px; width: 100px" value="OK"/>
+<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_RIGHT';" style="height: 40px; width: 100px" value=">"/>
 <br><br>
 
-<input type=button onClick="javascript:window.location='remote.cgi?IRcode=41';" style="height: 40px; width: 100px" value="\/"/>
+<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_DOWN';" style="height: 40px; width: 100px" value="\/"/>
 <br><br>
-<input type=button onClick="javascript:window.location='remote.cgi?IRcode=28';"  style="height: 25px; width: 100px" value="BACK"/>
-<input type=button onClick="javascript:window.location='remote.cgi?IRcode=AB';"  style="height: 25px; width: 100px" value="GUIDE"/>
-<input type=button onClick="javascript:window.location='remote.cgi?IRcode=5B';"  style="height: 25px; width: 100px" value="EXIT"/>
+<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_RETURN_EXIT';" style="height: 25px; width: 100px" value="BACK"/>
+<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_GUIDE';" style="height: 25px; width: 100px" value="GUIDE"/>
+<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_EXIT';" style="height: 25px; width: 100px" value="EXIT"/>
 <br><br>
-<input type=button onClick="javascript:window.location='remote.cgi?IRcode=72';"  style="height: 25px; width: 68px; background-color:red" value=""/>
+<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_RED_KEY';" style="height: 25px; width: 68px; background-color:red" value=""/>
 &nbsp
-<input type=button onClick="javascript:window.location='remote.cgi?IRcode=71';"  style="height: 25px; width: 68px; background-color:green" value=""/>
+<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_GREEN_KEY';" style="height: 25px; width: 68px; background-color:green" value=""/>
 &nbsp
-<input type=button onClick="javascript:window.location='remote.cgi?IRcode=63';"  style="height: 25px; width: 67px; background-color:yellow" value=""/>
+<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_YELLOW_KEY';" style="height: 25px; width: 67px; background-color:yellow" value=""/>
 &nbsp
-<input type=button onClick="javascript:window.location='remote.cgi?IRcode=61';"  style="height: 25px; width: 67px; background-color:blue" value=""/> 
+<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_BLUE_KEY';" style="height: 25px; width: 67px; background-color:blue" value=""/> 
 <br><br>
-<input type=button onClick="javascript:window.location='remote.cgi?IRcode=20';"  style="height: 25px; width: 70px" value="TEXT"/>
+<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_TEXT';" style="height: 25px; width: 70px" value="TEXT"/>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<input type=button onClick="javascript:window.location='remote.cgi?IRcode=21';"  style="height: 25px; width: 70px" value="T.OPT"/>
+<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_T_OPT';" style="height: 25px; width: 70px" value="T.OPT"/>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<input type=button onClick="javascript:window.location='remote.cgi?IRcode=39';"  style="height: 25px; width: 70px" value="Subtitle"/>
+<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_SUBTITLE';" style="height: 25px; width: 70px" value="Subtitle"/>
 <br><br>
-<input type=button onClick="javascript:window.location='remote.cgi?IRcode=B1';"  style="height: 25px; width: 70px" value="STOP"/>
+<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_STOP';" style="height: 25px; width: 70px" value="STOP"/>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<input type=button onClick="javascript:window.location='remote.cgi?IRcode=B0';"  style="height: 25px; width: 70px" value="PLAY"/>
+<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_PLAY';" style="height: 25px; width: 70px" value="PLAY"/>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<input type=button onClick="javascript:window.location='remote.cgi?IRcode=BA';"  style="height: 25px; width: 70px" value="PAUSE"/>
+<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_PAUSE';" style="height: 25px; width: 70px" value="PAUSE"/>
 <br><br>
-<input type=button onClick="javascript:window.location='remote.cgi?IRcode=8F';"  style="height: 25px; width: 70px" value="Rewind"/>
+<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_BACKWARD';" style="height: 25px; width: 70px" value="Rewind"/>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<input type=button onClick="javascript:window.location='remote.cgi?IRcode=8E';"  style="height: 25px; width: 70px" value="Forward"/>
+<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_FORWARD';" style="height: 25px; width: 70px" value="Forward"/>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<input type=button onClick="javascript:window.location='remote.cgi?IRcode=7E';"  style="height: 25px; width: 70px" value="Simplink"/>
+<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_SIMPLINK';" style="height: 25px; width: 70px" value="Simplink"/>
 <br><br>
-<input type=button onClick="javascript:window.location='remote.cgi?IRcode=AA';"  style="height: 25px; width: 70px" value="INFO"/>
+<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_INFO';" style="height: 25px; width: 70px" value="INFO"/>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<input type=button onClick="javascript:window.location='remote.cgi?IRcode=91';"  style="height: 25px; width: 70px" value="AD"/>
+<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_AD';" style="height: 25px; width: 70px" value="AD"/>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<input type=button onClick="javascript:window.location='remote.cgi?IRcode=9F';"  style="height: 25px; width: 70px" value="APP/*"/>
+<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_APP';" style="height: 25px; width: 70px" value="APP/*"/>
 <br><br>
-<input type=button onClick="javascript:window.location='remote.cgi?IRcode=BD';"  style="height: 25px; width: 70px" value="REC"/>
+<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_REC';" style="height: 25px; width: 70px" value="REC"/>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<input type=button onClick="javascript:window.location='remote.cgi?IRcode=9E';"  style="height: 25px; width: 70px" value="LIVE TV"/>
+<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_LIVETV';" style="height: 25px; width: 70px" value="LIVE TV"/>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<input type=button onClick="javascript:window.location='remote.cgi?IRcode=DC';"  style="height: 25px; width: 70px" value="3D"/>
+<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_3D';" style="height: 25px; width: 70px" value="3D"/>
 <br><br>
 </font>
-</div><font size="+2"><b>OpenLGTV Remote Control</b></font>
+</div>
 </center>
 </body>
 </html>
