@@ -1,0 +1,76 @@
+K_ENERGY_SAVING=95
+K_POWER=08
+K_INPUT=0b
+K_RATIO=79
+K_RATIO_4_3=76
+K_RATIO_16_9=77
+K_RATIO_ZOOM=af
+K_TV_RAD=f0
+K_TV=d6
+K_Q_MENU=45
+K_MENU=43
+K_UP=40
+K_DOWN=41
+K_LEFT=07
+K_RIGHT=06
+K_OK=44
+K_RETURN_EXIT=28
+K_INFO=aa
+K_AV_MODE=30
+K_VOL_UP=02
+K_VOL_DOWN=03
+K_FAV_MARK=1e
+K_MUTE=09
+K_PAGE_UP=00
+K_PAGE_DOWN=01
+K_0=10
+K_1=11
+K_2=12
+K_3=13
+K_4=14
+K_5=15
+K_6=16
+K_7=17
+K_8=18
+K_9=19
+K_LIST=53
+K_Q_VIEW=1a
+K_RED_KEY=72
+K_GREEN_KEY=71
+K_YELLOW_KEY=63
+K_BLUE_KEY=61
+K_TEXT=20
+K_T_OPT=21
+K_SUBTITLE=39
+K_SIMPLINK=7e
+K_FREEZE=65
+K_NETCAST=59
+K_EXIT=5b
+K_STOP=b1
+K_PLAY=b0
+K_PAUSE=ba
+K_AD=91
+K_TILT=f9
+K_IN_STOP=fa
+K_IN_START=fb
+K_P_CHECK=fc
+K_S_CHECK=fd
+K_POWERONLY=fe
+K_EZ_ADJUST=ff
+K_INPUT_AV1=5a
+K_INPUT_AV2=d0
+K_INPUT_COMPONENT1=bf
+K_INPUT_COMPONENT2=d4
+K_INPUT_RGB=d5
+K_INPUT_HDMI1=ce
+K_INPUT_HDMI2=cc
+K_BRIGHT_UP=e1
+K_BRIGHT_DOWN=e0
+K_GUIDE=ab
+K_3D=dc
+K_WIDGETS=58
+K_FORWARD=8e
+K_BACKWARD=8f
+K_REC=bd
+K_LIVETV=9e
+K_APP=9f
