@@ -1,14 +1,25 @@
 #!/bin/haserl
-# remote.cgi by mihaifireball
-# adapted to work with OPENRELEASE redirections by xeros
+# remote.cgi by mihaifireball & xeros
 # Source code released under GPL License
 content-type: text/html
 
 <html>
 
-<?  if [ "$FORM_IRcode" != "" ]
+<?  
+    # So far only these actions are supported via OPENRELEASE settings:
+    # - default - default action
+    # - K_<KEY> - defautl action for other key <KEY>
+    # - K_X<KEY_CODE> - key with keycode (<KEYCODE> in hex: for example AA)
+    # - SYSTEM: <COMMAND> - execute <COMMAND>
+
+    openrelease_cfg=/etc/openrelease/openrelease.cfg
+    openrelease_keymap=/etc/openrelease/openrelease_keymap.cfg
+    irkeymap=/var/www/remote/irkeymap.cfg
+
+    if [ "$FORM_IRcode" != "" -o "$FORM_IRkey" != "" ]
     then
-	rel_stdin="`grep ^input /mnt/user/etc/openrelease/openrelease.cfg | awk -F= '{print $2}' | sed 's/ *//g'`"
+	[ "$FORM_IRcode" = "" ] && FORM_IRcode=`grep -m1 "^${FORM_IRkey}=" "$irkeymap" | cut -d= -f2`
+	rel_stdin="`grep -m1 ^input ${openrelease_cfg} | cut -d= -f2 | sed 's/ *//g'`"
 	if [ -z "`grep "OPENRELEASE=1" /mnt/user/cfg/settings`" -o "$rel_stdin" = "NULL" ]
 	then
 	    tmux send-keys -t "RELEASE" "mc 01 $FORM_IRcode" C-m
@@ -17,7 +28,29 @@ content-type: text/html
 	    then
 		rel_stdin="/tmp/openrelease.in"
 	    fi
-	    echo "mc 01 $FORM_IRcode" >> "$rel_stdin"
+	    [ "$FORM_IRkey" != "" ] && openrel_action=`grep -m1 "^${FORM_IRkey}" "$openrelease_keymap" | cut -d= -f2 | sed 's/^ *//g'`
+	    if [ "${openrel_action:0:2}" = "K_" ]
+	    then
+		if [ "${openrel_action:0:3}" = "K_X" ]
+		then
+		    FORM_IRcode="${openrel_action:3:2}"
+		else
+		    FORM_IRcode=`grep -m1 "^${openrel_action}=" "$irkeymap" | cut -d= -f2`
+		fi
+		openrel_action=default
+	    fi
+	    if [ -z "$openrel_action" -o "$openrel_action" = "default" ]
+	    then
+		[ -n "$FORM_IRcode" ] && echo "mc 01 $FORM_IRcode" >> "$rel_stdin"
+	    else
+		if [ "${openrel_action:0:7}" = "SYSTEM:" ]
+		then
+		    command="${openrel_action#SYSTEM:}"
+		    command="${command# }"
+		    command="${command% &}"
+		    [ -n "$command" ] && ${command} &
+		fi
+	    fi
 	fi
     fi
 ?>
