@@ -11,6 +11,7 @@ OpenLGTV BCM Changelog
     * ADD: /mnt/usb{1,2}/Drive{5,6} mount points
     * ADD: support for EXT3, JFS, [ EXT4 via additional kernel modules ], other supported filesystems by kernel automounting on hotplug
     * ADD: support for OpenLGTV_BCM dir, Yahoo Widgets, etc. on JFS, EXT3/[4],... formated partitions
+    * ADD: OPENRELEASE bound key actions in Remote Control web interface
     * UPDATE: improve Yavido alternative with bigger font, arrows navigation and shorter refresh time
 
 0.5.0-beta2:
